# gdexample-cmake

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  build.bat  build.py  build.sh  example.gdextension  gdexample.gdnlib  gdexample.gdns  gdexample_2d.gdns  gdexample_3d.gdns  gdexample_camera.gdns  project.godot  readme.txt
android/: build.gradle  gradle.properties  settings.gradle
android/godot/: build.gradle
android/godot/src/main/: AndroidManifest.xml
android/godot/src/main/java/com/piercelbrooks/godot/: GodotActivity.java
android/godot/src/main/res/values/: strings.xml
demo/: demo.pck
scenes/: Main.tscn
scripts/: Cylinder.gd  Main.gd
src/: CMakeLists.txt  detournavigation.cpp  detournavigation.h  gdexample.cpp  gdexample.h  gdexample_2d.cpp  gdexample_2d.h  gdexample_3d.cpp  gdexample_3d.h  gdexample_camera.cpp  gdexample_camera.h  gdlibrary.cpp
src/ylts/: license.txt
src/ylts/examples/: creating_tss_devices.cpp  getting_information.cpp  getting_information_wireless.cpp  pairing_wireless_devices.cpp  setting_data.cpp  setting_data_wireless.cpp  wired_streaming.cpp  wireless_streaming.cpp
src/ylts/include/: threespace_api.hpp  threespace_api_export.h  threespace_device.hpp  threespace_dongle.hpp  threespace_sensor.hpp
src/ylts/include/serial/: serial_enumerator.hpp
src/ylts/src/: main.c  threespace_api.cpp  threespace_api_export.cpp  threespace_device.cpp  threespace_dongle.cpp  threespace_sensor.cpp
src/ylts/src/serial/: serial_enumerator.cpp  serial_enumerator_osx.cpp  serial_enumerator_win.cpp
src/ylts/src/serial/impl/: win.cc
src/ylts/src/yost/: yost_fair_mutex.cpp  yost_math.cpp
